--- a/hisp.cabal
+++ b/hisp.cabal
@@ -41,13 +41,13 @@ common shared
     , OverloadedLists
   build-depends:
       base >= 4.12 && < 4.21
-    , data-fix >= 0.3.0 && < 0.4
-    , exceptions >= 0.10.0 && < 0.11
-    , filepath >= 1.4.2 && < 1.5
-    , relude >= 1.0.0 && < 1.3
-    , serialise >= 0.2.1 && < 0.3
-    , template-haskell >= 2.13 && < 2.22
-    , time >= 1.8.0 && < 1.9 || >= 1.9.3 && < 1.13
+    , data-fix
+    , exceptions
+    , filepath
+    , relude
+    , serialise
+    , template-haskell
+    , time
     , tasty
     , tasty-hunit
     , geniplate-mirror
@@ -87,52 +87,52 @@ library
   hs-source-dirs:
     src
   build-depends:
-    , aeson >= 1.4.2 && < 1.6 || >= 2.0 && < 2.2
-    , array >= 0.4 && < 0.6
-    , base16-bytestring >= 0.1.1 && < 1.1
-    , binary >= 0.8.5 && < 0.9
-    , bytestring >= 0.10.8 && < 0.12
+    , aeson
+    , array
+    , base16-bytestring
+    , binary
+    , bytestring
     , cryptonite
-    , comonad >= 5.0.4 && < 5.1
-    , containers >= 0.5.11.0 && < 0.7
-    , deepseq >= 1.4.3 && <1.5
-    , deriving-compat >= 0.3 && < 0.7
-    , directory >= 1.3.1 && < 1.4
-    , extra >= 1.7 && < 1.8
-    , free >= 5.1 && < 5.2
-    , gitrev >= 1.1.0 && < 1.4
-    , hashable >= 1.2.5 && < 1.5
-    , hashing >= 0.1.0 && < 0.2
-    , http-client >= 0.5.14 && < 0.6 || >= 0.6.4 && < 0.8
-    , http-client-tls >= 0.3.5 && < 0.4
-    , http-types >= 0.12.2 && < 0.13
-    , lens-family >= 1.2.2 && < 2.2
-    , lens-family-core >= 1.2.2 && < 2.2
-    , lens-family-th >= 0.5.0 && < 0.6
-    , logict >= 0.6.0 && < 0.7 || >= 0.7.0.2 && < 0.10
+    , comonad
+    , containers
+    , deepseq
+    , deriving-compat
+    , directory
+    , extra
+    , free
+    , gitrev
+    , hashable
+    , hashing
+    , http-client
+    , http-client-tls
+    , http-types
+    , lens-family
+    , lens-family-core
+    , lens-family-th
+    , logict
     , attoparsec
-    , monad-control >= 1.0.2 && < 1.1
-    , monadlist >= 0.0.2 && < 0.1
-    , mtl >= 2.2.2 && < 2.5
-    , neat-interpolation >= 0.4 && < 0.6
-    , parser-combinators >= 1.0.1 && < 1.4
-    , pretty-show >= 1.9.5 && < 1.11
-    , prettyprinter >= 1.7.0 && < 1.8
-    , process >= 1.6.3 && < 1.7
-    , ref-tf >= 0.5 && < 0.6
-    , regex-tdfa >= 1.2.3 && < 1.4
-    , scientific >= 0.3.6 && < 0.4
-    , semialign >= 1.2 && < 1.4
-    , some >= 1.0.1 && < 1.1
-    , split >= 0.2.3 && < 0.3
-    , syb >= 0.7 && < 0.8
-    , th-lift-instances >= 0.1 && < 0.2
-    , text >= 1.2.3 && < 2.1
+    , monad-control
+    , monadlist
+    , mtl
+    , neat-interpolation
+    , parser-combinators
+    , pretty-show
+    , prettyprinter
+    , process
+    , ref-tf
+    , regex-tdfa
+    , scientific
+    , semialign
+    , some
+    , split
+    , syb
+    , th-lift-instances
+    , text
     -- , these >= 1.0.1 && < 1.2
-    , transformers >= 0.5.5 && < 0.8
-    , transformers-base >= 0.4.5 && < 0.6
-    , unix-compat >= 0.4.3 && < 0.8
-    , unordered-containers >= 0.2.14 && < 0.3
+    , transformers
+    , transformers-base
+    , unix-compat
+    , unordered-containers
 
 executable hisp
   import: shared
