cabal: add yaya-hedgehog

--- a/hisp.cabal
+++ b/hisp.cabal
@@ -133,6 +133,7 @@ library
     , transformers-base
     , unix-compat
     , unordered-containers
+    , yaya-hedgehog
 
 executable hisp
   import: shared
