cabal: rm dep on geniplate-mirror
Since it is deprecated long time ago and I forgot to remove it beforehand.

--- a/hisp.cabal
+++ b/hisp.cabal
@@ -50,7 +50,7 @@ common shared
     , time
     , tasty
     , tasty-hunit
-    , geniplate-mirror
+    -- , geniplate-mirror
     , validity
     , genvalidity
     , QuickCheck
